--- a/backendabout.css
+++ b/backendabout.css
@@ -195,12 +195,14 @@ body {
     text-shadow: 1px 1px 4px black;
   }
 
-  .music-player {
-    bottom: 10px;
-    right: 10px;
-    padding: 8px 12px;
-    font-size: 13px;
-  }
+.music-player {
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  background: rgba(0, 0, 0, 0.7); /* กลบพื้นหลัง */
+  z-index: 9999; /* อยู่บนสุด */
+}
+
 
   .music-player button {
     padding: 6px 12px;
@@ -212,5 +214,6 @@ body {
     padding: 0 8px;
   }
 }
+
 
 
