--- a/backendskill.css
+++ b/backendskill.css
@@ -266,6 +266,10 @@ body {
   display: flex;
   align-items: center;
   gap: 20px;
+  position: fixed;
+
+}
+
 }
 
 .two-column-layout {
@@ -596,6 +600,7 @@ body {
     
     
     
+
 
 
 
