--- a/backendskill.css
+++ b/backendskill.css
@@ -290,11 +290,12 @@ body {
 
 #main-img {
   position: absolute;
-  left: 20%; /* จากเดิม 50% */
-  transform: translateX(-50%);
+  left: 20%;
   top: -10%;
   z-index: 10;
+  transform: none; /* ลบการขยับกลับ */
 }
+
 
 .home-content {
   display: flex;
@@ -600,6 +601,7 @@ body {
     
     
     
+
 
 
 
