--- a/backendskill.css
+++ b/backendskill.css
@@ -235,7 +235,7 @@ body {
   justify-items: center; /* จัดภาพให้อยู่กลางช่อง */
   align-items: center;
   padding: 2%;
-  font-size: 10px;
+  font-size: 0;
   line-height: 0;
   margin-left: 280px;
   z-index: 1;
@@ -266,10 +266,6 @@ body {
   display: flex;
   align-items: center;
   gap: 20px;
-  position: fixed;
-
-}
-
 }
 
 .two-column-layout {
@@ -290,12 +286,11 @@ body {
 
 #main-img {
   position: absolute;
-  left: 20%;
+  left: 20%; /* จากเดิม 50% */
+  transform: translateX(-50%);
   top: -10%;
   z-index: 10;
-  transform: none; /* ลบการขยับกลับ */
 }
-
 
 .home-content {
   display: flex;
@@ -320,6 +315,7 @@ body {
   width: 100px;
   height: auto;
 }
+
 
 @media (max-width: 768px) {
     
@@ -601,6 +597,7 @@ body {
     
     
     
+
 
 
 
