--- a/backendskill.css
+++ b/backendskill.css
@@ -1,5 +1,6 @@
 html, body {
   overflow-x: hidden;
+    height: 100%;
 }
 nav ul {
     list-style: none;  /* เอาจุดออก */
@@ -602,6 +603,7 @@ body {
     
     
     
+
 
 
 
