--- a/backendskill.css
+++ b/backendskill.css
@@ -1,6 +1,8 @@
 html, body {
   overflow-x: hidden;
-    height: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
 nav ul {
     list-style: none;  /* เอาจุดออก */
@@ -603,6 +605,7 @@ body {
     
     
     
+
 
 
 
