--- a/backendskill.css
+++ b/backendskill.css
@@ -54,10 +54,6 @@ body {
     background-repeat: no-repeat;
     color: white;
     font-size: large;
-    min-height: 100vh;   /* ให้ background เต็มจอ */
-    margin: 0;           /* ตัด margin เริ่มต้นออก */
-    padding: 0;
-}
 
 }
 
@@ -291,12 +287,11 @@ body {
 }
 
 #main-img {
-  position: relative;  /* แทน absolute */
-  top: 0;
-  left: 0;
-  transform: none;
-  margin: 0 auto;
-  display: block;
+  position: absolute;
+  left: 20%; /* จากเดิม 50% */
+  transform: translateX(-50%);
+  top: -10%;
+  z-index: 10;
 }
 
 .home-content {
@@ -322,6 +317,7 @@ body {
   width: 100px;
   height: auto;
 }
+
 
 
 @media (max-width: 768px) {
@@ -604,6 +600,7 @@ body {
     
     
     
+
 
 
 
