--- a/backendskill.css
+++ b/backendskill.css
@@ -295,7 +295,10 @@ body {
   transform: translateX(-50%);
   top: -10%;
   z-index: 10;
+  max-width: 300px; /* จำกัดความกว้างสูงสุด */
+  max-height: 400px; /* จำกัดความสูงสูงสุด */
 }
+
 
 .home-content {
   display: flex;
@@ -603,6 +606,7 @@ body {
     
     
     
+
 
 
 
