--- a/backendskill.css
+++ b/backendskill.css
@@ -268,6 +268,7 @@ body {
 
 
 .home-image{
+  position: relative;
   display: flex;
   align-items: center;
   gap: 20px;
@@ -606,6 +607,7 @@ body {
     
     
     
+
 
 
 
