--- a/backendskill.css
+++ b/backendskill.css
@@ -272,6 +272,7 @@ body {
   width: 100%;
   max-width: 320px;
   margin: 0 auto;
+  margin-left:30px;
 }
 
 .two-column-layout {
@@ -607,6 +608,7 @@ body {
     
     
     
+
 
 
 
