--- a/backendskill.css
+++ b/backendskill.css
@@ -296,6 +296,7 @@ body {
   margin-left: 0;
   margin-right: auto;
   height: auto;
+  width: 800px;
 }
 
 
@@ -606,6 +607,7 @@ body {
     
     
     
+
 
 
 
