--- a/backendskill.css
+++ b/backendskill.css
@@ -271,7 +271,7 @@ body {
   position: relative;
   width: 100%;
   max-width: 600px;
-  margin-left:60px;
+  margin: 0 auto; 
 
 
 .two-column-layout {
@@ -607,6 +607,7 @@ body {
     
     
     
+
 
 
 
