--- a/backendskill.css
+++ b/backendskill.css
@@ -1,5 +1,10 @@
 html, body {
   overflow-x: hidden;
+  min-height: 100vh;
+  margin: 0;
+  padding: 0;
+}
+
 
 }
 nav ul {
@@ -633,6 +638,7 @@ body {
     
     
     
+
 
 
 
