--- a/backendskill.css
+++ b/backendskill.css
@@ -294,7 +294,7 @@ body {
 }
 
 #main-img {
-  position: absolute;
+  position: relative;
   top: 0;
   left: 0;
   width: 60%;
@@ -664,6 +664,7 @@ body {
     
     
     
+
 
 
 
