--- a/backendabout.css
+++ b/backendabout.css
@@ -162,7 +162,7 @@ body {
   }
 
   nav a {
-    color: black; /* ลิงก์เป็นดำ */
+    color: white; /* ลิงก์เป็นดำ */
   }
 
   nav ul {
@@ -236,6 +236,7 @@ body {
   }
 
 }
+
 
 
 
