--- a/backendabout.css
+++ b/backendabout.css
@@ -156,13 +156,13 @@ body {
     padding: 0.5rem;
     top: 0;
     border-radius: 8px;
-    color: white; /* ข้อความ navbar เป็นดำ */
+    color: white !important ; /* ข้อความ navbar เป็นดำ */
     background: rgba(255, 255, 255, 0.2);
     backdrop-filter: blur(10px);
   }
 
   nav a {
-    color: white; /* ลิงก์เป็นดำ */
+    color: black; /* ลิงก์เป็นดำ */
   }
 
   nav ul {
@@ -236,6 +236,7 @@ body {
   }
 
 }
+
 
 
 
