--- a/backendabout.css
+++ b/backendabout.css
@@ -151,28 +151,22 @@ body {
 }
 
 @media screen and (max-width: 768px) {
-  /* Navbar ปรับฟอนต์เป็นขาว */
-  .navbar {
+  
+.navbar {
     padding: 0.5rem;
-    top: 0;
-    border-radius: 8px;
-    background: rgba(255, 255, 255, 0.2);
-    backdrop-filter: blur(10px);
   }
 
-  nav a {
-    color: white !important; /* ฟอนต์ navbar เป็นขาว */
-    display: block;
-    text-align: center;
-    padding: 0.5rem 1rem;
+.navbar a {
+    font-size: 1em;
+    padding: 0.5em;
   }
 
-  nav ul {
+.navbar ul {
     flex-direction: column;
     gap: 1rem;
-    align-items: center;
     padding: 0;
     margin: 0;
+    text-align: center;
   }
 
   nav li {
@@ -228,6 +222,7 @@ body {
     margin-top: 0.25rem;
   }
 }
+
 
 
 
