--- a/backendabout.css
+++ b/backendabout.css
@@ -153,7 +153,7 @@ body {
 @media screen and (max-width: 768px) {
 
 .home-section {
-    padding-top: 80px; /* ดันเนื้อหาลงจาก navbar */
+    padding-top: 100px; /* ดันเนื้อหาลงจาก navbar */
   }  
 .navbar {
     padding: 0.5rem;
@@ -192,7 +192,7 @@ body {
     align-items: center;
     justify-content: center;
     padding: 0 16px;
-    gap: 0.5rem;
+    gap: 0.25rem;
   }
 
   #main-img {
@@ -229,7 +229,12 @@ body {
     font-size: 20px;
     margin-top: 0.25rem;
   }
+
+.music-player button {
+    display: none;
 }
+}
+
 
 
 
