--- a/backendskill.css
+++ b/backendskill.css
@@ -378,8 +378,9 @@ body {
   body {
     font-size: medium;
     background-image: url("images/bgport.png");
-    background-size: 20px 20px;
-    background-position: center;
+    background-size: cover;             
+    background-position: center;        
+    background-repeat: no-repeat;      
     padding: 0 16px;
     color: white;
     text-align: center;
@@ -629,6 +630,7 @@ body {
     
     
     
+
 
 
 
