--- a/backendabout.css
+++ b/backendabout.css
@@ -197,7 +197,7 @@ body {
 
   #main-img {
     display: block;
-    margin: 16px auto !important;
+    margin: 8px auto ;
     width: 120px;
     height: 120px;
     border-radius: 50%;
@@ -234,6 +234,7 @@ body {
     display: none;
 }
 }
+
 
 
 
