--- a/backendabout.css
+++ b/backendabout.css
@@ -215,9 +215,12 @@ body {
   }
 
   /* ข้อความอยู่ใต้รูป */
-  .home-text {
-    text-align: center;
-  }
+.home-text {
+  text-align: center;
+  margin-top: 0;
+  padding-top: 0;
+}
+
 
   .home-text h1 {
     font-size: 32px;
@@ -234,6 +237,7 @@ body {
     display: none;
 }
 }
+
 
 
 
