--- a/backendabout.css
+++ b/backendabout.css
@@ -192,7 +192,7 @@ body {
     align-items: center;
     justify-content: center;
     padding: 0 16px;
-    gap: 0rem;
+    gap: 1rem;
   }
 
   #main-img {
@@ -217,25 +217,22 @@ body {
   /* ข้อความอยู่ใต้รูป */
 .home-text {
   text-align: center;
-  margin-top: 0;
-  padding-top: 0;
+  margin-top: 1rem; /* ดันข้อความลงจากรูป */
 }
 
 
-  .home-text h1 {
-    font-size: 32px;
-    
-  }
 
-  .home-text h2 {
-    padding-top: 0rem;
-    font-size: 20px;
-  }
+.home-text h1,
+.home-text h2 {
+  margin: 0;
+}
+
 
 .music-player button {
     display: none;
 }
 }
+
 
 
 
