--- a/backendabout.css
+++ b/backendabout.css
@@ -192,12 +192,12 @@ body {
     align-items: center;
     justify-content: center;
     padding: 0 16px;
-    gap: 1rem;
+    gap: 0 !important;
   }
 
   #main-img {
     display: block;
-    margin: 8px auto ;
+    margin: 4px auto !important;
     width: 120px;
     height: 120px;
     border-radius: 50%;
@@ -217,7 +217,8 @@ body {
   /* ข้อความอยู่ใต้รูป */
 .home-text {
   text-align: center;
-  margin-top: 1rem; /* ดันข้อความลงจากรูป */
+  margin-top: 4px !important; /* ดันข้อความลงจากรูป */
+  padding-top: 0 !important;
 }
 
 
@@ -232,6 +233,7 @@ body {
     display: none;
 }
 }
+
 
 
 
