--- a/backendabout.css
+++ b/backendabout.css
@@ -163,38 +163,42 @@ body {
     padding: 0;
   }
 
+
+  .home-section {
+    padding-top: 280px; /* ดันเนื้อหาลงจาก navbar */
+  }
+
+  /* ส่วนของ navbar */
   .navbar {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    background-color: rgba(0,0,0,0.7);
     padding: 0.5rem;
     z-index: 1000;
   }
 
   .navbar ul {
-    display: flex;
     flex-direction: column;
     gap: 1rem;
     padding: 0;
     margin: 0;
-    list-style: none;
     text-align: center;
   }
 
   .navbar a {
     font-size: 1em;
     padding: 0.5em;
-    color: white;
-    text-decoration: none;
   }
 
-  .navbar a:hover {
+  /* รายการเมนูใน navbar */
+  nav li {
+    width: 100%;
+    text-align: center;
+  }
+
+  nav li:hover {
+    transform: none;
+  }
+
+  nav a:hover {
     color: #dddddd;
-  }
-
-  .home-section {
-    padding-top: 280px;
   }
 
   .home-content {
@@ -239,6 +243,7 @@ body {
 }
 
 }
+
 
 
 
