--- a/backendabout.css
+++ b/backendabout.css
@@ -194,7 +194,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 0 16px;
+    padding: 0;
     gap: 0 ;
   }
 
@@ -237,6 +237,7 @@ body {
   }
 
 }
+
 
 
 
