--- a/backendabout.css
+++ b/backendabout.css
@@ -209,7 +209,8 @@ body {
     object-fit: cover;
     position: static ;
     transform: none ;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); 
+    margin-bottom: 0 !important;
   }
 
   /* ปิดการขยายเมื่อ hover */
@@ -221,16 +222,19 @@ body {
   .home-text {
     text-align: center;
     gap:0 ;
+    margin-top: 0 !important;
+    pading-top: 0 !important;
   }
 
 .home-text h2 {
-    font-size: 10px;
+    font-size: 20px;
     margin: 0;
     text-shadow: 2px 2px 8px black
+    
 }
 
     .home-text h1 {
-    font-size: 15px;
+    font-size: 25px;
     margin: 0;
     text-shadow: 2px 2px 8px black
 }
@@ -241,6 +245,7 @@ body {
   }
 
 }
+
 
 
 
