--- a/backendabout.css
+++ b/backendabout.css
@@ -223,7 +223,7 @@ body {
     text-align: center;
     gap:0 ;
     margin-top: 0 !important;
-    pading-top: 0 !important;
+    padding-top: 0 !important;
   }
 
 .home-text h2 {
@@ -245,6 +245,7 @@ body {
   }
 
 }
+
 
 
 
