--- a/backendabout.css
+++ b/backendabout.css
@@ -191,6 +191,7 @@ body {
 
   /* กล่องรวมรูปกับข้อความ */
   .home-content {
+    display:flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -245,6 +246,7 @@ body {
   }
 
 }
+
 
 
 
