--- a/backendabout.css
+++ b/backendabout.css
@@ -225,6 +225,8 @@ body {
     text-align: center;
     margin-top: 0 !important;
     padding-top: 0 !important;
+    margin-bottom: 0 !important;
+    border: 1px solid red;
   }
 
 .home-text h2 {
@@ -246,6 +248,7 @@ body {
   }
 
 }
+
 
 
 
