--- a/backendabout.css
+++ b/backendabout.css
@@ -213,6 +213,7 @@ body {
     transform: none ;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); 
     margin-bottom: 0 !important;
+    border: 1px solid red;
   }
 
   /* ปิดการขยายเมื่อ hover */
@@ -248,6 +249,7 @@ body {
   }
 
 }
+
 
 
 
