--- a/backendabout.css
+++ b/backendabout.css
@@ -243,7 +243,19 @@ body {
     display: none;
   }
 
+.home-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  padding: 0;
+  margin: 0;
+  min-height: 100vh;
 }
+
+
+}
+
 
 
 
