--- a/backendabout.css
+++ b/backendabout.css
@@ -209,6 +209,7 @@ body {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); 
     margin-bottom: 0 !important;
     border: 1px solid red;
+    padding-top: 280px ;
   }
 
   /* ปิดการขยายเมื่อ hover */
@@ -243,18 +244,11 @@ body {
     display: none;
   }
 
-.home-section {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-start;
-  padding: 0;
-  margin: 0;
-  min-height: 100vh;
-}
+
 
 
 }
+
 
 
 
