--- a/backendabout.css
+++ b/backendabout.css
@@ -187,10 +187,8 @@ body {
 
   /* กล่องรวมรูปกับข้อความ */
   .home-content {
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-    padding-top: 280px ;
+  padding-top: 0;
+  margin-top: 280px;
   }
 
   /* รูปโปรไฟล์ */
@@ -244,6 +242,7 @@ body {
 
 
 }
+
 
 
 
