--- a/backendabout.css
+++ b/backendabout.css
@@ -187,8 +187,12 @@ body {
 
   /* กล่องรวมรูปกับข้อความ */
   .home-content {
-  padding-top: 0;
-  margin-top: 280px;
+  display: flex;
+  padding-top: 280px;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 0;
   }
 
   /* รูปโปรไฟล์ */
@@ -242,6 +246,7 @@ body {
 
 
 }
+
 
 
 
